src/main/java/com/example/cars/error/InsufficientFundsException.java
package com.example.cars.error;

public class InsufficientFundsException extends RuntimeException {
    public InsufficientFundsException(String message) {
        super(message);
    }
}
